--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -54,6 +54,9 @@
   display: flex;
   align-items: center;
   height: 100%;
+  white-space: nowrap;
+  max-width: 120px;
+  text-align: center;
 }
 
 .navbar-custom .nav-link:hover {
@@ -66,6 +69,7 @@
   align-items: center;
   margin: 0;
   padding: 0;
+  flex-wrap: nowrap;
 }
 
 .navbar-custom .nav-item {
@@ -107,6 +111,8 @@
   .navbar-custom .nav-link {
     margin: 0.25rem 0;
     padding: 0.75rem 1rem !important;
+    max-width: none;
+    white-space: normal;
   }
   
   /* Mobile dropdown positioning - always below text */
