--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -25,7 +25,7 @@
 .form-title {
   font-size: 32px;
   font-weight: bold;
-  color: var(--orange-gold);
+  color: var(--parliament-blue);
   text-align: center;
   margin-bottom: 40px;
 }
@@ -85,13 +85,13 @@ select.form-input option {
 @media (max-width: 768px) {
   .form-input select,
   select.form-input {
-    color: var(--orange-gold) !important;
+    color: var(--parliament-blue) !important;
     background-color: white;
   }
   
   .form-input option,
   select.form-input option {
-    color: var(--orange-gold) !important;
+    color: var(--parliament-blue) !important;
     background-color: white;
   }
 }
