--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -87,12 +87,7 @@
   align-items: center;
 }
 
-.about-logo .logo-container {
-  flex-direction: column;
-  align-items: center;
-}
-
-.about-logo .logo-img {
+.about-logo-img {
   height: 80px;
   width: auto;
   max-width: 250px;
