HomePage carousel'deki 1. item yoruma alındı

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -12,6 +12,11 @@
   background-color: var(--black);
 }
 
+.lead{
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
 /* Carousel Controls */
 .carousel-control-prev,
 .carousel-control-next {
