--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -10,6 +10,9 @@
   display: flex;
   align-items: center;
   background-color: var(--black);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .lead{
