--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -6,11 +6,10 @@
 .hero-slide {
   padding: 80px 0;
   position: relative;
-  min-height: 75vh;
+  height: 75vh;
   display: flex;
-  align-items: center;
   background-color: var(--black);
-  background-size: contain;
+  align-items: center;
   background-repeat: no-repeat;
   background-position: center;
 }
