--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -65,7 +65,7 @@
 .form-input:focus,
 .form-textarea:focus {
   outline: none;
-  border-color: var(--primary-color);
+  border-color: var(--parliament-blue);
 }
 
 /* Select box styling */
@@ -111,7 +111,8 @@ select.form-input option {
 }
 
 .btn-submit {
-  background-color: var(--primary-color);
+  background-color: var(--parliament-blue);
+  transition: all 0.3s ease;
   color: white;
   border: none;
   padding: 16px 32px;
@@ -123,7 +124,7 @@ select.form-input option {
 }
 
 .btn-submit:hover {
-  background-color: var(--primary-dark);
+  background-color: var(--parliament-blue-mid);
 }
 
 /* Responsive Design */
