--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -36,7 +36,7 @@
 }
 
 .footer-contact-item i {
-  color: var(--primary-color);
+  color: var(--light-green);
   width: 16px;
   text-align: center;
 }
@@ -48,7 +48,7 @@
 }
 
 .footer-email-link:hover {
-  color: var(--primary-color);
+  color: var(--light-green);
   text-decoration: underline;
 }
 
