--- a/src/pages/AboutPage/AboutPage.css
+++ b/src/pages/AboutPage/AboutPage.css
@@ -97,7 +97,7 @@
 
 /* Right Green Bar */
 .green-bar {
-  background-color: var(--primary-color);
+  background-color: var(--light-green);
   height: 100%;
   min-height: 70vh;
 }
