--- a/src/pages/TeamPage/TeamPage.css
+++ b/src/pages/TeamPage/TeamPage.css
@@ -35,7 +35,7 @@
 /* Team Member Section */
 .team-member-section {
   padding: 50px 0;
-  background-color: #f8f9fa;
+  background-color: var(--gray-100);
 }
 
 .team-member-card {
